Bug 131426 - Skia: Cropped text when I scroll page up-down-up in Writer
Summary: Skia: Cropped text when I scroll page up-down-up in Writer
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
: 131547 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-03-19 14:04 UTC by Roman Kuznetsov
Modified: 2020-03-28 12:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example ODT (16.52 KB, application/vnd.oasis.opendocument.text)
2020-03-19 14:05 UTC, Roman Kuznetsov
Details
Screenshot for illustration of problem (140.43 KB, image/png)
2020-03-19 14:06 UTC, Roman Kuznetsov
Details
simple text document with 15pt that clips on scroll with Skia/Vulkan and raster (4.92 MB, application/vnd.oasis.opendocument.text)
2020-03-25 17:02 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-03-19 14:04:40 UTC
Description:
Skia: Cropped text when I scroll page up-down-up in Writer

Steps to Reproduce:
1. Open file from attach
2. Scroll page up-down-up-down
3. Look at page (see a screenshot in attach)

Actual Results:
cropped text

Expected Results:
normal text


Reproducible: Always


User Profile Reset: No



Additional Info:
8c672690fff662cb04b6a0436cd742f37
Потоков ЦП: 4; ОС: Windows 10.0 Build 18362; Отрисовка ИП: Skia/растр; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 Roman Kuznetsov 2020-03-19 14:05:46 UTC
Created attachment 158815 [details]
Example ODT
Comment 2 Roman Kuznetsov 2020-03-19 14:06:34 UTC
Created attachment 158816 [details]
Screenshot for illustration of problem
Comment 3 Roman Kuznetsov 2020-03-19 14:07:07 UTC
build from 19 March 2020
Comment 4 Aron Budea 2020-03-19 22:31:34 UTC
Confirmed with 7.0.0.0.alpha0+ (6388c578c672690fff662cb04b6a0436cd742f37) / Windows when using Skia rendering.
Comment 5 Aron Budea 2020-03-25 15:51:15 UTC
*** Bug 131547 has been marked as a duplicate of this bug. ***
Comment 6 V Stuart Foote 2020-03-25 17:02:29 UTC
Created attachment 159003 [details]
simple text document with 15pt that clips on scroll with Skia/Vulkan and raster

Seeing this on Windows builds Windows 10 w/Intel HD Graphic 620 (drvr 26.20.100.7755)

Version: 7.0.0.0.alpha0+ (x64)
Build ID: d194171917978979ff90400133c2843ae7077db9
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

Happens with both Skia/Vulkan and Skia/raster modes...

No issue with OpenGL rendering, nor with default/GDI

Will check in a bit on a system with nVidia GPUs
Comment 7 V Stuart Foote 2020-03-25 18:23:24 UTC
So, the clipped lines of text while scrolling canvas happen on Windows builds with nVidia K2000 GPU (Windows 10 Ent (1909) w/nVidia drvr 26.21.14.4128)

Both Skia/Vulkan or Skia/raster rendering mode are affected.

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 7ae9c9572ccac55c0926b8a9779bb63c4236291c
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Raster; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 8 Commit Notification 2020-03-27 14:57:34 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b23e0f3ae6b2fb1cebe97c6517eb18f9ed4a76e

fix LOGFONTA/GetObjectW() mismatch and remove Skia HFONT hack (tdf#131426)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Roman Kuznetsov 2020-03-28 12:18:02 UTC
verified in

Версия: 7.0.0.0.alpha0+ (x64)
ID сборки: f265b14d6f8e3e63260b3c8ecce48d4251288fea
Потоков ЦП: 4; ОС: Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded