fix LOGFONTA/GetObjectW() mismatch and remove Skia HFONT hack (tdf#131426)

The GetObjectA/W() functions are type-unsafe, and since we #undef GetObject
I accidentally used GetObjectW() with LOGFONT that was LOGFONTA. This
caused the font name to be broken, which made Skia use a different font.
This means that Skia doesn't actually need the HFONT passing hack.

Change-Id: I67b8d18fef6a92f8839b1652e051da96d01c3a4e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91202
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>